# tracing-perfetto-sdk

./: Cargo.toml  MODULE.bazel
.github/workflows/: rust.yml
crates/layer/: BUILD.bazel  Cargo.toml
crates/layer/src/: debug_annotations.rs  ids.rs  init.rs  lib.rs  native_layer.rs  sdk_layer.rs  utils.rs
crates/schema/: BUILD.bazel  Cargo.toml  build.rs
crates/schema/src/: lib.rs
crates/sys/: BUILD.bazel  rust_cxx_bridge.bzl
crates/sys/src/: lib.rs  perfetto-bindings.cc  perfetto-bindings.h
crates/sys/tests/: happy_path.rs  invalid_config.rs
