[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"

[workspace.dependencies]
tracing-perfetto-sdk-layer = { version = "0.12.0", path = "crates/layer" }
tracing-perfetto-sdk-schema = { version = "0.12.0", path = "crates/schema" }
tracing-perfetto-sdk-sys = { version = "0.12.0", path = "crates/sys" }

anyhow = "1.0.94"
bytes = "1.9.0"
cxx = { version = "1.0.135", features = ["c++17"] }
cxx-build = { version = "1.0.135", features = ["parallel"] }
dashmap = "6.1.0"
futures = "0.3.31"
nix =  "0.29.0"
os-id = "3.1.0"
pbjson = "0.7.0"
pbjson-build = "0.7.0"
pbjson-types = "0.7.0"
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
serde = "1.0.216"
serde_yaml = "0.9.34"
thiserror = "2.0.8"
thread_local = "1.1.8"
tokio = { version = "1.44.2", features = ["rt"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
