[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"

[workspace.dependencies]
tracing-perfetto-sdk-layer = { version = "0.12.0", path = "crates/layer" }
tracing-perfetto-sdk-schema = { version = "0.12.0", path = "crates/schema" }
tracing-perfetto-sdk-sys = { version = "0.12.0", path = "crates/sys" }

anyhow = "1.0.100"
bytes = "1.10.1"
cxx = { version = "1.0.186", features = ["c++17"] }
cxx-build = { version = "1.0.186", features = ["parallel"] }
dashmap = "6.1.0"
futures = "0.3.31"
nix =  "0.30.1"
os-id = "3.1.0"
pbjson = "0.8.0"
pbjson-build = "0.8.0"
pbjson-types = "0.8.0"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
serde = "1.0.228"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
thread_local = "1.1.9"
tokio = { version = "1.47.1", features = ["rt"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
