[package]
name = "tracing-perfetto-sdk-layer"
description = "A provider of tracing layers for tracing-subscriber using the native C++ Perfetto SDK"
license = "Apache-2.0"
repository = "https://github.com/modal-labs/tracing-perfetto-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
cxx.workspace = true
prost.workspace = true
thiserror.workspace = true
thread-id.workspace = true
thread_local.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-perfetto-sdk-schema.workspace = true
tracing-perfetto-sdk-sys.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing-appender.workspace = true

[features]
tokio = ["dep:tokio"]
serde = ["tracing-perfetto-sdk-schema/serde"]

[[example]]
name = "native-layer"
required-features = ["serde"]

[[example]]
name = "perfetto-dump-trace"
required-features = ["serde"]

[[example]]
name = "sdk-layer"
required-features = ["serde"]

[[test]]
name = "kitchen_sink"
required-features = ["serde"]
