[package]
name = "tracing-perfetto-sdk-schema"
description = "Perfetto Prost protobuf bindings used by tracing-perfetto-sdk"
license = "Apache-2.0"
repository = "https://github.com/modal-labs/tracing-perfetto-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
pbjson = { workspace = true, optional = true }
pbjson-types = { workspace = true, optional = true }
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
pbjson-build = { workspace = true, optional = true }
prost-build.workspace = true

[features]
serde = ["dep:pbjson", "dep:pbjson-types", "dep:pbjson-build", "dep:serde"]
